libycp/testsuite/tests/expressions/Bracket-typeerror.err
tests/expressions/Bracket-typeerror.ycp:3:Expected 'term', seen 'list'.
[Parser] tests/expressions/Bracket-typeerror.ycp:3 Expected 'term', seen 'list'.
Parsed:
----------------------------------------------------------------------
YError
----------------------------------------------------------------------
[Interpreter] tests/expressions/Bracket-typeerror.ycp:1 Parser error
